--- a/THANKS
+++ b/THANKS
@@ -511,3 +511,7 @@ Maurino C. Maria - bug report.
 Valdo - bug report.
 
 sigit_yuwono - suggestion.
+
+S Chandrasekar - suggestion.
+
+utismetis - suggestion.
