--- a/TODO
+++ b/TODO
@@ -22,7 +22,9 @@ them. Do it like OpenOffice.org, Firefox, etc.)
 3----------------------------------------------------------
 From Horatiu Halmajan:
 
-Max gaps constraints with weight under 100% (this is very difficult)
+Max gaps constraints with weight under 100%
+
+Liviu: This is very difficult.
 
 4----------------------------------------------------------
 From Horatiu Halmajan:
