--- a/THANKS
+++ b/THANKS
@@ -318,7 +318,7 @@ Davide Cottignoli - suggestions.
 
 agemagician - suggestions.
 
-Vlăduţ Frăţiman - suggestions.
+Vlăduț Frățiman - suggestions.
 
 vlad2005 - suggestions.
 
@@ -529,3 +529,5 @@ Emiliano Llano Díaz - Spanish translation.
 mohammed - suggestion.
 
 Taro Tada - Japanese translation.
+
+V Paul C Charlesraj - suggestion.
